--- a/Views/Auth/Login.cshtml
+++ b/Views/Auth/Login.cshtml
@@ -31,26 +31,26 @@
 
                     <div class="form-group">
                         <div class="col-md-12">
-                            <label for="email" class="col-sm-2 control-label">Login/email</label>
+                            <label for="email" class="col-sm-2 control-label">Логин/email</label>
                             <div class="col-sm-10">
-                                <input type="text" name="email" class="form-control" id="email" placeholder="Login/email">
+                                <input type="text" name="email" class="form-control" id="email" placeholder="Логин/email">
                             </div>
                         </div>
                     </div>
 
                     <div class="form-group">
                         <div class="col-md-12">
-                            <label for="password" class="col-sm-2 control-label">Password</label>
+                            <label for="password" class="col-sm-2 control-label">Парол</label>
                             <div class="col-sm-10">
-                                <input type="password" name="password" class="form-control" id="password" placeholder="Password">
+                                <input type="password" name="password" class="form-control" id="password" placeholder="Парол">
                             </div>
                         </div>
                     </div>
 
                     <div class="form-group">
                         <div class="col-md-12">
-                            <div class="col-sm-offset-2 col-sm-10">
-                                <input type="submit" value="Sign in" class="btn btn-default">
+                            <div class="col-sm-offset-2 col-sm-10 justify-content-center" >
+                                <button type="submit" class="form-control">Даромадан</button>
                             </div>
                         </div>
                     </div>
