--- a/Views/Topics/Detail.cshtml
+++ b/Views/Topics/Detail.cshtml
@@ -191,7 +191,7 @@
 
 @if (@HttpContextAccessor.HttpContext?.User.FindFirst(ClaimTypes.NameIdentifier) != null)
 {
-    <section class="section-padding section-bg">
+    <section class="section-normal-padding-top section-bg">
         <div class="container">
             <div class="row justify-content-center">
 
@@ -230,7 +230,7 @@
 
 
 
-<section class="section-padding section-bg">
+<section class="section-normal-padding section-bg">
     <div class="container">
         <div class="row justify-content-center" id="comments-container">
 
