--- a/Views/Topics/Index.cshtml
+++ b/Views/Topics/Index.cshtml
@@ -37,14 +37,11 @@
                 @foreach(var topic in Model)
                 {
                     <div class="custom-block custom-block-topics-listing bg-white shadow-lg mb-5">
-                        <div class="d-flex">
-                            @*<img src="~/images/topics/undraw_Remote_design_team_re_urdx.png" class="custom-block-image img-fluid" alt="">*@
+                        <div class="flex-grow">
 
                             <div class="custom-block-topics-listing-info d-flex">
                                 <div>
                                     <h5 class="mb-2">@topic.Name</h5>
-
-                                    <p class="mb-0" style="color: #fff">Topic Listing includes home, listing, detail and contact pages. Feel free to modify this template for your custom websites.</p>
 
                                     @if (!topic.HasChildren)
                                     {
