--- a/Views/Home/InDevelopment.cshtml
+++ b/Views/Home/InDevelopment.cshtml
@@ -27,7 +27,7 @@
 
             <div class="col-lg-8 col-12 mt-3 mx-auto">
 
-                <h3 class="mb-4">Ин саҳифа дар ҳоли сохтмон аст</h3>
+                <h3 class="mb-4">Коркард қарор дорад</h3>
 
             </div>
         </div>
