--- a/Views/Users/Profile.cshtml
+++ b/Views/Users/Profile.cshtml
@@ -30,21 +30,29 @@
 <section class="section-padding section-bg">
     <div class="container">
         <div class="row">
-
-            <div class="col-lg-12 col-12">
-                <h3 class="mb-4 pb-2">@Model.Name</h3>
+            <div class="col-lg-8 col-12 m-auto" style="padding-bottom:20px">
+                <label for="floatingInput">Ному насаб</label>
+                <input type="text" class="form-control" value="@Model.Name" required="" readonly>
             </div>
 
-            <div class="col-lg-8 col-12 m-auto">
+            @*<div class="col-lg-12 col-12">
+                <h3 class="mb-4 pb-2">@Model.Name</h3>
+            </div>*@
+            
+            <div class="col-lg-8 col-12 m-auto" style="padding-bottom:20px">
+                <label for="floatingInput">Логин</label>
+                <input type="text" class="form-control" value="@Model.Login" required="" readonly>
+            </div>
+            @*<div class="col-lg-8 col-12 m-auto">
                 <h3 class="mb-4">@Model.Login</h3>
             </div>
 
             <div class="col-lg-8 col-12 m-auto">
                 <a href="#" class="btn custom-btn mt-3 mt-lg-4">Изменить данные</a>
-            </div>
+            </div>*@
 
             <div class="col-lg-8 col-12 m-auto">
-                <a href="@Url.Action("SignOutt", "Users")" class="btn custom-btn mt-3 mt-lg-4">Баромадан</a>
+                <a href="@Url.Action("SignOutt", "Users")" class="btn custom-btn mt-3 mt-lg-4" style="background-color: #F00">Баромадан</a>
             </div>
 
             <!-- 
