--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -60,19 +60,19 @@
                             </li>*@
 
                             <li class="nav-item">
-                                <a class="nav-link" href="@Url.Action("InDevelopment", "Home")">Тамос</a>
+                                <a class="nav-link" href="@Url.Action("Contact", "Home")">Тамос</a>
                             </li>
                             @if (@HttpContextAccessor.HttpContext?.User.FindFirst(ClaimTypes.NameIdentifier) != null)
                             {
                             <li class="nav-item">
                                 <a class="nav-link" href="@Url.Action("Profile", "Users")">Профил</a>
                             </li>
-                                @*@if (@HttpContextAccessor.HttpContext?.User.IsInRole("True") ?? false)
+                                @if (@HttpContextAccessor.HttpContext?.User.IsInRole("True") ?? false)
                                 {
                                 <li class="nav-item">
-                                    <a class="nav-link" href="@Url.Action("Profile", "Users")">AdminPanel</a>
+                                    <a class="nav-link" href="@Url.Action("InDevelopment", "Home")">AdminPanel</a>
                                 </li>
-                                }*@
+                                }
                             } 
                             else 
                             {
