--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -70,7 +70,7 @@
                                 @if (@HttpContextAccessor.HttpContext?.User.IsInRole("True") ?? false)
                                 {
                                 <li class="nav-item">
-                                    <a class="nav-link" href="@Url.Action("InDevelopment", "Home")">AdminPanel</a>
+                                    <a class="nav-link" href="@Url.Action("Index", "AdminPanel")">AdminPanel</a>
                                 </li>
                                 }
                             } 
