--- a/Views/AdminPanel/Index.cshtml
+++ b/Views/AdminPanel/Index.cshtml
@@ -1,17 +1,63 @@
-﻿@{
+﻿@using Alghorithms.Models
+@{
     Layout = "/Views/Shared/Admin.cshtml";
 }
+@model List<Topic>
 
 <div class="templatemo-content-wrapper">
     <div class="templatemo-content">
-        <ol class="breadcrumb">
+        @*<ol class="breadcrumb">
             <li><a href="index.html">Admin Panel</a></li>
             <li><a href="#">Dashboard</a></li>
             <li class="active">Overview</li>
             <li><a href="sign-in.html">Sign In Form</a></li>
-        </ol>
-        <h1>Dashboard</h1>
+        </ol>*@
+        <h1>Админпанель</h1>
         <p>Dashboard is free admin template for everyone. Credits go to <a href="http://chartjs.org">Chart JS</a>, <a href="http://getbootstrap.com">Bootstrap</a>, and <a href="http://jqvmap.com">JQVMap</a>. templatemo provides <a href="#">free website templates</a> that can be used for any purpose. Morbi id nisi enim. Ut congue interdum pharetra facilisi. Aenean consectetur pellentesque mauris nec ornare. Nam tortor just, condimentum.</p>
+        
+        <div class="table-responsive">
+            <h4 class="margin-bottom-15">New Users Table</h4>
+            <table class="table table-striped table-hover table-bordered">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Наименование</th>
+                        <th>Является группой</th>
+                        <th>ID группы</th>
+                        <th>Порядок</th>
+                        <th>Действие</th>
+                        <th>Изменить</th>
+                        <th>Удалить</th>
+                    </tr>
+                </thead>
+                <tbody>
+
+                    @foreach (var topic in @Model)
+                    {
+                        <tr>
+                            <td>@topic.Id</td>
+                            <td>@topic.Name</td>
+                            <td>@topic.HasChildren</td>
+                            <td>@topic.ParentId</td>
+                            <td>@topic.Order</td>
+                            <td>
+                                @if (topic.HasChildren) {
+                                    <a href="@Url.Action("EditUser", "Topics", new { id = topic.Id})" class="btn btn-default">Перейти к контенту</a>
+                                }
+                                else
+                                {
+                                    <a href="@Url.Action("GetChildren", "Topics", new { id = topic.Id})" class="btn btn-default">Перейти к дочерним группам</a>
+                                }
+                            </td>
+                            <td><a href="@Url.Action("EditUser", "Users", new { userId = topic.Id})" class="btn btn-default">Изменить</a></td>
+                            <td><a href="javascript:;" onclick="userId = @topic.Id" data-toggle="modal" data-target="#userDeleteModal" class="btn btn-link">Удалить</a></td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+
+
         <div class="margin-bottom-30">
             <div class="row">
                 <div class="col-md-12">
