--- a/Views/Users/AllUsers.cshtml
+++ b/Views/Users/AllUsers.cshtml
@@ -26,14 +26,14 @@
         <div class="row margin-bottom-30">
             <div class="col-md-12">
                 <ul class="nav nav-pills">
-                    <li class="active"><a href="#">New Users <span class="badge">42</span></a></li>
-                    <li><a href="#">Active Users <span class="badge">107</span></a></li>
-                    <li><a href="#">Expired Users <span class="badge">3</span></a></li>
+                    <li class="active"><a href="#">Все пользователи@* <span class="badge">42</span>*@</a></li>
+                    <li><a href="#">Адиминистраторы@* <span class="badge">107</span>*@</a></li>
+                    @*<li><a href="#">Expired Users <span class="badge">3</span></a></li>*@
                 </ul>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-12">
+            <div id="usersContainer" class="col-md-12">
                 <div class="btn-group pull-right" id="templatemo_sort_btn">
                     <button type="button" class="btn btn-default">Sort by</button>
                     <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
@@ -71,7 +71,7 @@
                                     <td>@user.Login</td>
                                     <td>@(user.IsAdmin ? "Admin" : "Пользователь")</td>
                                     <td>@user.PasswordHash</td>
-                                    <td><a href="@Url.Action("EditUser", "AdminPanel", @user.Id)" class="btn btn-default">Edit</a></td>
+                                    <td><a href="@Url.Action("EditUser", "Users", new { userId = @user.Id})" class="btn btn-default">Edit</a></td>
                                     @*<td>
                                         <!-- Split button -->
                                         <div class="btn-group">
@@ -94,7 +94,7 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="table-responsive">
+                @*<div class="table-responsive">
                     <h4 class="margin-bottom-15">Another Table of Existing Users</h4>
                     <table class="table table-striped table-hover table-bordered">
                         <thead>
@@ -255,7 +255,7 @@
                             </tr>
                         </tbody>
                     </table>
-                </div>
+                </div>*@
                 <ul class="pagination pull-right">
                     <li class="disabled"><a href="#">&laquo;</a></li>
                     <li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
