--- a/wwwroot/css/templatemo-topic-listing.css
+++ b/wwwroot/css/templatemo-topic-listing.css
@@ -111,9 +111,10 @@ h6 {
 }
 
 p {
-  color: var(--p-color);
-  font-size: var(--p-font-size);
-  font-weight: var(--font-weight-normal);
+    color: var(--p-color);
+    font-size: var(--p-font-size);
+    font-weight: var(--font-weight-normal);
+    text-indent: 2ch;
 }
 
 ul li {
