--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -57,7 +57,7 @@ function searchClick() {
                                     <li>
                                         <h4 class="text-white mb-3">Ба ҷаҳони алгоритмҳо ғарқ шавед.</h4>
 
-                                        <p class="text-white">Дар бораи намудҳои гуногун, таъинот ва истифодаи онҳо маълумот гиред. Аз ҷобаҷогузорӣ то дарефти роҳҳо, маводҳои мо ба шумо дар фаҳмидани асосҳо ва мафҳумҳои пешрафта кӯмак мерасонанд.</p>
+                                        <p class="text-white" align="justify">Дар бораи намудҳои гуногун, таъинот ва истифодаи онҳо маълумот гиред. Аз ҷобаҷогузорӣ то дарефти роҳҳо, маводҳои мо ба шумо дар фаҳмидани асосҳо ва мафҳумҳои пешрафта кӯмак мерасонанд.</p>
 
                                         <div class="icon-holder">
                                             <i class="bi-search"></i>
@@ -67,7 +67,7 @@ function searchClick() {
                                     <li>
                                         <h4 class="text-white mb-3">Хатчӯби Алгоритмҳо</h4>
 
-                                        <p class="text-white">Ин ба шумо имкон медиҳад, ки ба маводи омӯхтаатон ба осонӣ баргардед ва онро дар амал татбиқ кунед.</p>
+                                        <p class="text-white" align="justify">Ин ба шумо имкон медиҳад, ки ба маводи омӯхтаатон ба осонӣ баргардед ва онро дар амал татбиқ кунед.</p>
 
                                         <div class="icon-holder">
                                             <i class="bi-bookmark"></i>
@@ -77,7 +77,7 @@ function searchClick() {
                                     <li>
                                         <h4 class="text-white mb-3">Дар вазифаҳои воқеӣ машқ кунед</h4>
 
-                                        <p class="text-white">Мушкилотро ҳал кунед, малакаҳои худро такмил диҳед ва мутахассиси алгоритмҳо ва сохторҳои маълумот шавед.</p>
+                                        <p class="text-white" align="justify">Мушкилотро ҳал кунед, малакаҳои худро такмил диҳед ва мутахассиси алгоритмҳо ва сохторҳои маълумот шавед.</p>
 
                                         <div class="icon-holder">
                                             <i class="bi-archive"></i>
@@ -105,26 +105,26 @@ function searchClick() {
                             <p class="text-center">
 
                             <div class="">
-                                <p>"О-и калон" (Е "Big O") -- ин нотатсияест, ки дар информатика ва математика барои тавсифи мураккабии асимптотикии алгоритмҳо истифода мешавад. Он нишон медиҳад, ки чӣ гуна вақти иҷрои алгоритм ё истифодаи хотираи он вобаста ба андозаи маълумоти воридшуда меафзояд.</p>
+                                <p align="justify">"О-и калон" (Е "Big O") -- ин нотатсияест, ки дар информатика ва математика барои тавсифи мураккабии асимптотикии алгоритмҳо истифода мешавад. Он нишон медиҳад, ки чӣ гуна вақти иҷрои алгоритм ё истифодаи хотираи он вобаста ба андозаи маълумоти воридшуда меафзояд.</p>
                             </div>
                             
                             <br/>
 
                             <div class="">
-                                <p>Ақидаи асосии Big O тасвири бадтарин сенарияи рафтори алгоритм аст. Масалан, агар алгоритм мураккабии O(n) дошта бошад, ин маънои онро дорад, ки вақти иҷрои алгоритм бо афзоиши андозаи маълумоти воридшуда ба таври хаттӣ зиед мешавад. Нотатсияи O (n^2) маънои вобастагии квадратиро дорад, яъне вақти иҷро мутаносибан ба квадрати андозаи маълумоти воридшуда зиед мешавад.</p>
+                                <p align="justify">Ақидаи асосии Big O тасвири бадтарин сенарияи рафтори алгоритм аст. Масалан, агар алгоритм мураккабии O(n) дошта бошад, ин маънои онро дорад, ки вақти иҷрои алгоритм бо афзоиши андозаи маълумоти воридшуда ба таври хаттӣ зиед мешавад. Нотатсияи O (n^2) маънои вобастагии квадратиро дорад, яъне вақти иҷро мутаносибан ба квадрати андозаи маълумоти воридшуда зиед мешавад.</p>
                             </div>
 
                             <br/>
 
                             <h4 class="">Намунаҳои аломатҳои маъмулан истифодашаванда:</h4>
                             <ul>
-                                <li class="">O (1): мураккабии Доимӣ, вақти иҷро аз андозаи маълумоти воридшуда вобаста нест;</li>
-                                <li class="">O (log n): мураккабии Логарифмӣ, аксар вақт дар алгоритмҳои ҷустуҷӯ пайдо мешавад;</li>
-                                <li class="">O (n log n): мураккабии Хаттӣ-логарифмӣ, ки барои алгоритмҳои самараноки ҷудокунӣ, ба монанди ҷудокунии якҷояшавӣ хос аст;</li>
-                                <li class="">O (n ^ 2): мураккабии Квадратӣ, дар алгоритмҳои камтар самараноки навъбандӣ, масалан, дар навъбандии иловаҳо пайдо мешавад.</li>
+                                <li align="justify">O (1): мураккабии Доимӣ, вақти иҷро аз андозаи маълумоти воридшуда вобаста нест;</li>
+                                <li align="justify">O (log n): мураккабии Логарифмӣ, аксар вақт дар алгоритмҳои ҷустуҷӯ пайдо мешавад;</li>
+                                <li align="justify">O (n log n): мураккабии Хаттӣ-логарифмӣ, ки барои алгоритмҳои самараноки ҷудокунӣ, ба монанди ҷудокунии якҷояшавӣ хос аст;</li>
+                                <li align="justify">O (n ^ 2): мураккабии Квадратӣ, дар алгоритмҳои камтар самараноки навъбандӣ, масалан, дар навъбандии иловаҳо пайдо мешавад.</li>
                             </ul>
 
-                            <div class=""><p>Истифодаи Big O ба шумо имкон медиҳад, ки алгоритмҳои самарабахшро барои ҳалли масъалаҳои мушаххас муқоиса кунед ва интихоб кунед, хусусан вақте ки сухан дар бораи коркарди миқдори зиеди маълумот меравад.</p></div>
+                            <div class=""><p align="justify">Истифодаи Big O ба шумо имкон медиҳад, ки алгоритмҳои самарабахшро барои ҳалли масъалаҳои мушаххас муқоиса кунед ва интихоб кунед, хусусан вақте ки сухан дар бораи коркарди миқдори зиеди маълумот меравад.</p></div>
                             </p>
                         </div>
                     </div>
@@ -139,7 +139,7 @@ function searchClick() {
                             <p class="text-center">
 
                                 <div class="">
-                                    <p>Блок-схемаҳо ин намоиши графикии алгоритмҳо ё равандҳо мебошад, ки барои осон кардани фаҳмидан ва таҳлили пайдарпаии амалҳо истифода мешавад. Онҳо дар барномасозӣ, муҳандисӣ, идоракунии лоиҳа ва дигар соҳаҳо барои визуализатсияи кори системаҳо васеъ истифода мешаванд.</p>
+                                    <p align="justify">Блок-схемаҳо ин намоиши графикии алгоритмҳо ё равандҳо мебошад, ки барои осон кардани фаҳмидан ва таҳлили пайдарпаии амалҳо истифода мешавад. Онҳо дар барномасозӣ, муҳандисӣ, идоракунии лоиҳа ва дигар соҳаҳо барои визуализатсияи кори системаҳо васеъ истифода мешаванд.</p>
                                 </div>
 
                                 <br />
@@ -149,19 +149,19 @@ function searchClick() {
                                 <h4 class="">Унсурҳои асосии блок-схемаҳо:</h4>
 
                                 <ul>
-                                    <li class="">Байзавӣ (терминатор): Оғоз ва анҷоми раванд;</li>
-                                    <li class="">Росткунҷа (раванд): Тавсифи амалиет е амали дар раванд иҷрошаванда;</li>
-                                    <li class="">Ромб (қарор): нуқтаи қабули қарор бо натиҷаҳои гуногун, одатан "ҳа" е "не";</li>
-                                    <li class="">Параллелограмм (вуруд / баромад): Амалиети ворид кардани маълумот ба раванд е баровардани маълумот аз он;</li>
-                                    <li class="">Тирҳо (ҷараен): самти ҷараени равандро аз як унсур ба унсури дигар нишон медиҳанд.</li>
+                                    <li align="justify">Байзавӣ (терминатор): Оғоз ва анҷоми раванд;</li>
+                                    <li align="justify">Росткунҷа (раванд): Тавсифи амалиет е амали дар раванд иҷрошаванда;</li>
+                                    <li align="justify">Ромб (қарор): нуқтаи қабули қарор бо натиҷаҳои гуногун, одатан "ҳа" е "не";</li>
+                                    <li align="justify">Параллелограмм (вуруд / баромад): Амалиети ворид кардани маълумот ба раванд е баровардани маълумот аз он;</li>
+                                    <li align="justify">Тирҳо (ҷараен): самти ҷараени равандро аз як унсур ба унсури дигар нишон медиҳанд.</li>
                                 </ul>
 
                                 <h4 class="">Афзалиятҳои истифодаи блок-схемҳо:</h4>
 
                                 <ul>
-                                    <li class="">Осонии дарк: тасвири Графикӣ фаҳмиши равандҳои мураккабро осон мекунад;</li>
-                                    <li class="">Равшанӣ: диаграммаҳои Ҷараен барои муайян кардани хатогиҳои мантиқӣ ва қадамҳои зиедатӣ дар алгоритм кӯмак мекунанд;</li>
-                                    <li class="">Универсалӣ: Барои соҳаҳо Ва намудҳои гуногуни равандҳо мувофиқанд.</li>
+                                    <li align="justify">Осонии дарк: тасвири Графикӣ фаҳмиши равандҳои мураккабро осон мекунад;</li>
+                                    <li align="justify">Равшанӣ: диаграммаҳои Ҷараен барои муайян кардани хатогиҳои мантиқӣ ва қадамҳои зиедатӣ дар алгоритм кӯмак мекунанд;</li>
+                                    <li align="justify">Универсалӣ: Барои соҳаҳо Ва намудҳои гуногуни равандҳо мувофиқанд.</li>
                                 </ul>
 
                                 <h4 class="">Намунаи блок-схема дар амал</h4>
@@ -173,7 +173,7 @@ function searchClick() {
                                 <br/>
 
                                 <div class="">
-                                    <p>Воситаҳои муосир барои сохтани диаграммаҳо аз нармафзор ба Монанди Microsoft Visio, Lucidchart ва ғайра истифода мебаранд, ки раванди сохтан ва таҳрири диаграммаҳоро осон мекунад.</p>
+                                    <p align="justify">Воситаҳои муосир барои сохтани диаграммаҳо аз нармафзор ба Монанди Microsoft Visio, Lucidchart ва ғайра истифода мебаранд, ки раванди сохтан ва таҳрири диаграммаҳоро осон мекунад.</p>
                                 </div>
                             </p>
                         </div>
