--- a/Views/AdminPanel/Index.cshtml
+++ b/Views/AdminPanel/Index.cshtml
@@ -13,10 +13,13 @@
             <li><a href="sign-in.html">Sign In Form</a></li>
         </ol>*@
         <h1>Админпанель</h1>
-        <p>Dashboard is free admin template for everyone. Credits go to <a href="http://chartjs.org">Chart JS</a>, <a href="http://getbootstrap.com">Bootstrap</a>, and <a href="http://jqvmap.com">JQVMap</a>. templatemo provides <a href="#">free website templates</a> that can be used for any purpose. Morbi id nisi enim. Ut congue interdum pharetra facilisi. Aenean consectetur pellentesque mauris nec ornare. Nam tortor just, condimentum.</p>
+        @*<p>Dashboard is free admin template for everyone. Credits go to <a href="http://chartjs.org">Chart JS</a>, <a href="http://getbootstrap.com">Bootstrap</a>, and <a href="http://jqvmap.com">JQVMap</a>. templatemo provides <a href="#">free website templates</a> that can be used for any purpose. Morbi id nisi enim. Ut congue interdum pharetra facilisi. Aenean consectetur pellentesque mauris nec ornare. Nam tortor just, condimentum.</p>*@
         
         <div class="table-responsive">
-            <h4 class="margin-bottom-15">New Users Table</h4>
+            <div class="btn-group pull-right" id="templatemo_sort_btn" style="margin-bottom: 0px">
+                <button type="button" class="btn btn-default">Добавить</button>
+            </div>
+            <h4 class="margin-bottom-15">Все алгоритмы</h4>
             <table class="table table-striped table-hover table-bordered">
                 <thead>
                     <tr>
@@ -42,13 +45,13 @@
                             <td>@topic.Order</td>
                             <td>
                                 @if (topic.HasChildren) {
-                                    <a href="@Url.Action("EditUser", "Topics", new { id = topic.Id})" class="btn btn-default">Перейти к контенту</a>
+                                    <a href="@Url.Action("GetChildren", "Topics", new { id = topic.Id})" class="btn btn-default">Дочерние алгоритмы</a>
                                 }
                                 else {
-                                    <a href="@Url.Action("GetChildren", "Topics", new { id = topic.Id})" class="btn btn-default">Перейти к дочерним группам</a>
+                                    <a href="@Url.Action("XXXXXXXX", "Topics", new { id = topic.Id})" class="btn btn-default">Перейти к контенту</a>
                                 }
                             </td>
-                            <td><a href="@Url.Action("EditUser", "Users", new { userId = topic.Id})" class="btn btn-default">Изменить</a></td>
+                            <td><a href="@Url.Action("EditTopic", "Topics", new { Id = topic.Id})" class="btn btn-default">Изменить</a></td>
                             <td><a href="javascript:;" onclick="userId = @topic.Id" data-toggle="modal" data-target="#userDeleteModal" class="btn btn-link">Удалить</a></td>
                         </tr>
                     }
