--- a/Views/AdminPanel/Index.cshtml
+++ b/Views/AdminPanel/Index.cshtml
@@ -17,7 +17,7 @@
         
         <div class="table-responsive">
             <div class="btn-group pull-right" id="templatemo_sort_btn" style="margin-bottom: 0px">
-                <button type="button" class="btn btn-default">Добавить</button>
+                <a href="" class="btn btn-default">Добавить</a>
             </div>
             <h4 class="margin-bottom-15">Все алгоритмы</h4>
             <table class="table table-striped table-hover table-bordered">
@@ -25,8 +25,7 @@
                     <tr>
                         <th>ID</th>
                         <th>Наименование</th>
-                        <th>Является группой</th>
-                        <th>ID группы</th>
+                        <th>Имеет доченые алгоритмы</th>
                         <th>Порядок</th>
                         <th>Действие</th>
                         <th>Изменить</th>
@@ -41,7 +40,6 @@
                             <td>@topic.Id</td>
                             <td>@topic.Name</td>
                             <td>@(topic.HasChildren ? "Нет" : "Да")</td>
-                            <td>@topic.ParentId</td>
                             <td>@topic.Order</td>
                             <td>
                                 @if (topic.HasChildren) {
@@ -60,7 +58,7 @@
         </div>
 
 
-        <div class="margin-bottom-30">
+        @*<div class="margin-bottom-30">
             <div class="row">
                 <div class="col-md-12">
                     <ul class="nav nav-pills">
@@ -293,6 +291,6 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>*@
     </div>
 </div>
