--- a/Views/Contents/GetTopicContents.cshtml
+++ b/Views/Contents/GetTopicContents.cshtml
@@ -2,4 +2,109 @@
 @{
     Layout = "/Views/Shared/Admin.cshtml";
 }
-@model List<Content>
+@model (List<ContentType>, List<Content>)
+
+
+    
+<div class="templatemo-content-wrapper">
+    <div class="templatemo-content">
+      
+        <h1>Контент</h1>
+      
+        <div class="table-responsive">
+            <div class="btn-group pull-right" id="templatemo_sort_btn" style="margin-bottom: 0px">
+                <a href="" class="btn btn-default">Добавить</a>
+            </div>
+            <h4 class="margin-bottom-15">Все алгоритмы</h4>
+            
+
+            @foreach (var content in @Model.Item2)
+            {
+                <div class="row">
+                    <select name="ContentTypeName" class="form-control">
+                        @foreach (var contentType in @Model.Item1)
+                        {
+                            <option value="@contentType.Id" @(contentType.Id == content.ContentTypeId ? "selected" : "")>@contentType.Name</option>
+                        }
+                    </select>
+                    @if(content.ContentTypeName == "Text" || content.ContentTypeName == "MarkedText" || content.ContentTypeName == "Warning")
+                    {
+                        <textarea class="form-control" rows="4">@content.Data</textarea>
+                    }
+                    else
+                    {
+                        <input type="text" class="form-control" value="@content.Data">
+                    }
+                    @*<div class="container">
+                        <div class="row">
+                            <div class="col">
+                                1 of 2
+                            </div>
+                            <div class="col">
+                                2 of 2
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <label>Порядок</label>
+                            </div>
+                            <div class="col">
+                                <input type="number" class="form-control" value="@content.Order">
+                            </div>
+                            <div class="col">
+                               <button class="btn btn-primary">Изменить</button>
+                            </div>
+                        </div>
+                    </div>*@
+                    
+                    <div class="col-md-1 margin-bottom-15">
+                        <label>Порядок:</label>
+	                </div>
+                    <div class="col-md-5 margin-bottom-15">
+                        <input type="number" class="form-control" value="@content.Order">
+	                </div>
+                    <div class="col-md-6 margin-bottom-15" style="margin-left: auto;">
+	                    <button class="btn btn-primary">Изменить</button>
+	                </div>
+                </div>
+            }
+
+@*            <table class="table table-striped table-hover table-bordered">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Текст</th>
+                        <th>Тип контента</th>
+                        <th>Порядок</th>
+                    </tr>
+                </thead>
+                <tbody>
+
+                    @foreach (var content in @Model.Item2)
+                    {
+                        <tr>
+                            <td>@content.Id</td>
+                            <td contenteditable="true" class="editable">@content.Data</td>
+                            <td>
+                                 <select name="ContentTypeName" class="form-control">
+                                     @foreach (var contentType in @Model.Item1)
+                                    {
+                                         <option value="@contentType.Id" @(contentType.Name == content.ContentTypeName ? "selected" : "")>@contentType.Name</option>
+                                    }
+                                   </select>
+                            </td>
+                            <td contenteditable="true" class="editable">@content.Order</td>
+                            <td><a href="@Url.Action("EditTopic", "Topics", new { Id = content.Id})" class="btn btn-default">Внести изменения</a></td>
+                            <td><a href="javascript:;" onclick="userId = @content.Id" data-toggle="modal" data-target="#userDeleteModal" class="btn btn-link">Удалить</a></td>
+                        </tr>
+                    }
+                </tbody>
+            </table>*@
+        </div>
+
+
+
+    </div>
+</div>
+
+
