fix for release v8

--- a/Views/Shared/Admin.cshtml
+++ b/Views/Shared/Admin.cshtml
@@ -12,7 +12,7 @@
 	    <meta name="keywords" content="" />
 	    <meta name="description" content="" />
 	    <meta name="viewport" content="width=device-width">
-	    <link rel="stylesheet" href="~/css/ap/templatemo_main.css">
+	    <link rel="stylesheet" href="~/css/ap/main.css">
 	</head>
 	<body>
 	    <div id="main-wrapper">
@@ -44,19 +44,6 @@
 								Dashboard
 							</a>
 						</li>
-	                    @*<li class="sub">
-	                        <a href="javascript:;">
-	                            <i class="fa fa-database"></i> Nested Menu 
-	                            <div class="pull-right"><span class="caret"></span></div>
-	                        </a>
-	                        <ul class="templatemo-submenu">
-	                            <li><a href="#">Aenean</a></li>
-	                            <li><a href="#">Pellentesque</a></li>
-	                            <li><a href="#">Congue</a></li>
-	                            <li><a href="#">Interdum</a></li>
-	                            <li><a href="#">Facilisi</a></li>
-	                        </ul>
-	                    </li>*@
 	                    <li>
 							<a href="@Url.Action("InDevelopment", "Home")">
 								<i class="fa fa-cubes"></i>
@@ -122,6 +109,6 @@
 	    </div>
 	    <script src="~/js/ap/jquery.min.js"></script>
 	    <script src="~/js/ap/bootstrap.min.js"></script>
-	    <script src="~/js/ap/templatemo_script.js"></script>
+	    <script src="~/js/ap/script.js"></script>
 	</body>
 </html>
