--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
 
         <link href="@Url.Content("~/css/bootstrap-icons.css")" rel="stylesheet">
 
-        <link href="@Url.Content("~/css/templatemo-topic-listing.css") " rel="stylesheet">      
+        <link href="@Url.Content("~/css/main.css") " rel="stylesheet">
 
     </head>
     
@@ -143,30 +143,12 @@
 
                         <p class="text-white d-flex">
                             <a href="mailto:algorithmsproject69@gmail.com" class="site-footer-link">
-                                algorithmsproject69@gmail.com
+                                algorithmsproject69
                             </a>
                         </p>
                     </div>
 
                     <div class="col-lg-3 col-md-4 col-12 mt-4 mt-lg-0 ms-auto">
-                        <!-- <div class="dropdown">
-                            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            English</button>
-
-                            <ul class="dropdown-menu">
-                                <li><button class="dropdown-item" type="button">Thai</button></li>
-
-                                <li><button class="dropdown-item" type="button">Myanmar</button></li>
-
-                                <li><button class="dropdown-item" type="button">Arabic</button></li>
-
-                                @*<li><button class="dropdown-item" type="button">@HttpContextAccessor.HttpContext.User.FindFirst(ClaimTypes.NameIdentifier).Value</button></li>
-
-                                <li><button class="dropdown-item" type="button">@HttpContextAccessor.HttpContext.User.FindFirst(ClaimTypes.Name).Value</button></li>
-
-                                <li><button class="dropdown-item" type="button">@HttpContextAccessor.HttpContext.User.FindFirst(ClaimTypes.Role).Value</button></li>*@
-                            </ul>
-                        </div>-->
 
                         <p class="copyright-text mt-lg-5 mt-4">Copyright © 2024 Algorithms. All rights reserved.
                         <br><br>Design made by Shakhzod</p>
