--- a/wwwroot/css/main.css
+++ b/wwwroot/css/main.css
@@ -1,14 +1,3 @@
-/*
-
-TemplateMo 590 topic listing
-
-https://templatemo.com/tm-590-topic-listing
-
-*/
-
-/*---------------------------------------
-  CUSTOM PROPERTIES ( VARIABLES )             
------------------------------------------*/
 :root {
   --white-color:                  #ffffff;
   --primary-color:                #13547a;
@@ -61,9 +50,7 @@ body {
 }
 
 
-/*---------------------------------------
-  TYPOGRAPHY               
------------------------------------------*/
+/*---------------------------------------*/
 
 h2,
 h3,
@@ -145,9 +132,7 @@ strong {
 }
 
 
-/*---------------------------------------
-  SECTION               
------------------------------------------*/
+/*---------------------------------------*/
 .section-padding {
   padding-top: 100px;
   padding-bottom: 100px;
@@ -222,17 +207,13 @@ strong {
 }
 
 
-/*---------------------------------------
-  CUSTOM ICON COLOR               
------------------------------------------*/
+/*---------------------------------------*/
 .custom-icon {
   color: var(--secondary-color);
 }
 
 
-/*---------------------------------------
-  CUSTOM BUTTON               
------------------------------------------*/
+/*---------------------------------------*/
 .custom-btn {
   background: var(--custom-btn-bg-color);
   border: 2px solid transparent;
@@ -268,9 +249,7 @@ strong {
 }
 
 
-/*---------------------------------------
-  SITE HEADER              
------------------------------------------*/
+/*---------------------------------------*/
 .site-header {
   background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
   padding-top: 120px;
@@ -297,9 +276,7 @@ strong {
 }
 
 
-/*---------------------------------------
-  NAVIGATION              
------------------------------------------*/
+/*---------------------------------------*/
 .sticky-wrapper {
   position: absolute;
   top: 0;
@@ -506,9 +483,7 @@ strong {
 }
 
 
-/*---------------------------------------
-  HERO        
------------------------------------------*/
+/*---------------------------------------*/
 .hero-section {
   background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
   position: relative;
@@ -544,9 +519,7 @@ strong {
 }
 
 
-/*---------------------------------------
-  TOPICS              
------------------------------------------*/
+/*---------------------------------------*/
 .featured-section {
   background-color: var(--secondary-color);
   border-radius: 0 0 100px 100px;
@@ -669,9 +642,7 @@ strong {
 }
 
 
-/*---------------------------------------
-  TOPICS               
------------------------------------------*/
+/*---------------------------------------*/
 .topics-detail-block {
   border-radius: var(--border-radius-medium);
   position: relative;
@@ -712,9 +683,7 @@ blockquote {
 }
 
 
-/*---------------------------------------
-  PAGINATION              
------------------------------------------*/
+/*---------------------------------------*/
 .pagination {
   margin-top: 40px;
 }
@@ -751,9 +720,7 @@ blockquote {
 }
 
 
-/*---------------------------------------
-  TIMELINE              
------------------------------------------*/
+/*---------------------------------------*/
 .timeline-section {
   background-image: url('../images/colleagues-working-cozy-office-medium-shot.jpg');
   background-repeat: no-repeat;
@@ -855,9 +822,7 @@ blockquote {
 }
 
 
-/*---------------------------------------
-  FAQs              
------------------------------------------*/
+/*---------------------------------------*/
 .faq-section .accordion-item {
   border: 0;
 }
@@ -883,17 +848,13 @@ blockquote {
   line-height: 40px;
 }
 
-/*---------------------------------------
-  NEWSLETTER               
------------------------------------------*/
+/*---------------------------------------*/
 .newsletter-image {
   border-radius: var(--border-radius-medium);
 }
 
 
-/*---------------------------------------
-  CONTACT               
------------------------------------------*/
+/*---------------------------------------*/
 .google-map {
   border-radius: var(--border-radius-medium);
 }
@@ -904,9 +865,7 @@ blockquote {
 }
 
 
-/*---------------------------------------
-  SUBSCRIBE FORM               
------------------------------------------*/
+/*---------------------------------------*/
 .subscribe-form-wrap {
   padding: 50px;
 }
@@ -916,9 +875,7 @@ blockquote {
 }
 
 
-/*---------------------------------------
-  CUSTOM FORM               
------------------------------------------*/
+/*---------------------------------------*/
 .custom-form .form-control {
   border-radius: var(--border-radius-large);
   color: var(--p-color);
@@ -964,9 +921,7 @@ blockquote {
 }
 
 
-/*---------------------------------------
-  SITE FOOTER              
------------------------------------------*/
+/*---------------------------------------*/
 .site-footer {
   border-bottom: 10px solid var(--secondary-color);
   position: relative;
@@ -1045,9 +1000,7 @@ blockquote {
 }
 
 
-/*---------------------------------------
-  SOCIAL ICON               
------------------------------------------*/
+/*---------------------------------------*/
 .social-icon {
   margin: 0;
   padding: 0;
@@ -1079,9 +1032,7 @@ blockquote {
 }
 
 
-/*---------------------------------------
-  RESPONSIVE STYLES               
------------------------------------------*/
+/*---------------------------------------*/
 @media screen and (max-width: 991px) {
   h1 {
     font-size: 48px;
