--- a/Views/Shared/Admin.cshtml
+++ b/Views/Shared/Admin.cshtml
@@ -41,14 +41,7 @@
 	                    <li>
 							<a href="@Url.Action("Index", "AdminPanel")">
 								<i class="fa fa-home"></i>
-								Dashboard
-							</a>
-						</li>
-	                    <li>
-							<a href="@Url.Action("InDevelopment", "Home")">
-								<i class="fa fa-cubes"></i>
-								@*<span class="badge pull-right">9</span>*@
-								Data Visualization
+								Админпанел
 							</a>
 						</li>
 	                    <li>
@@ -56,19 +49,6 @@
 								<i class="fa fa-users"></i>
 								@*<span class="badge pull-right">NEW</span>*@
 								Все пользователи
-							</a>
-						</li>
-	                    <li>
-							<a href="@Url.Action("InDevelopment", "Home")">
-								<i class="fa fa-map-marker"></i>
-								@*<span class="badge pull-right">42</span>*@
-								Maps
-							</a>
-						</li>
-	                    <li @*class="active"*@>
-							<a href="@Url.Action("InDevelopment", "Home")">
-								<i class="fa fa-cog"></i>
-								Preferences
 							</a>
 						</li>
 	                    <li>
