--- a/Views/Users/AllUsers.cshtml
+++ b/Views/Users/AllUsers.cshtml
@@ -16,14 +16,14 @@
 
 <div class="templatemo-content-wrapper">
     <div class="templatemo-content">
-        <ol class="breadcrumb">
+        @*<ol class="breadcrumb">
             <li><a href="index.html">Admin Panel</a></li>
             <li><a href="#">Manage Users</a></li>
             <li class="active">Tables</li>
-        </ol>
-        <h1>Manage Users</h1>
-        <p>Here goes tables and users.</p>
-        <div class="row margin-bottom-30">
+        </ol>*@
+        <h1>Все пользователи Users</h1>
+
+        <!--<div class="row margin-bottom-30">
             <div class="col-md-12">
                 <ul class="nav nav-pills">
                     <li class="active"><a href="#">Все пользователи@* <span class="badge">42</span>*@</a></li>
@@ -31,10 +31,10 @@
                     @*<li><a href="#">Expired Users <span class="badge">3</span></a></li>*@
                 </ul>
             </div>
-        </div>
+        </div>-->
         <div class="row">
             <div id="usersContainer" class="col-md-12">
-                <div class="btn-group pull-right" id="templatemo_sort_btn">
+                @*<div class="btn-group pull-right" id="templatemo_sort_btn">
                     <button type="button" class="btn btn-default">Sort by</button>
                     <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
                     <span class="caret"></span>
@@ -45,7 +45,7 @@
                         <li><a href="#">Last Name</a></li>
                         <li><a href="#">Username</a></li>
                     </ul>
-                </div>
+                </div>*@
                 <div class="table-responsive">
                     <h4 class="margin-bottom-15">New Users Table</h4>
                     <table class="table table-striped table-hover table-bordered">
@@ -94,169 +94,9 @@
                         </tbody>
                     </table>
                 </div>
-                @*<div class="table-responsive">
-                    <h4 class="margin-bottom-15">Another Table of Existing Users</h4>
-                    <table class="table table-striped table-hover table-bordered">
-                        <thead>
-                            <tr>
-                                <th>#</th>
-                                <th>First Name</th>
-                                <th>Last Name</th>
-                                <th>Username</th>
-                                <th>Email</th>
-                                <th>Edit</th>
-                                <th>Action</th>
-                                <th>Delete</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>1</td>
-                                <td>John</td>
-                                <td>Henry</td>
-                                <td>@@jh</td>
-                                <td>a@company.com</td>
-                                <td><a href="#" class="btn btn-default">Edit</a></td>
-                                <td>
-                                    <!-- Split button -->
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-info">Action</button>
-                                        <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown">
-                                        <span class="caret"></span>
-                                        <span class="sr-only">Toggle Dropdown</span>
-                                        </button>
-                                        <ul class="dropdown-menu" role="menu">
-                                            <li><a href="#">Bootstrap</a></li>
-                                            <li><a href="#">Font Awesome</a></li>
-                                            <li><a href="#">jQuery</a></li>
-                                        </ul>
-                                    </div>
-                                </td>
-                                <td><a href="#" class="btn btn-link">Delete</a></td>
-                            </tr>
-                            <tr>
-                                <td>2</td>
-                                <td>Bill</td>
-                                <td>Goods</td>
-                                <td>@@bg</td>
-                                <td>bg@company.com</td>
-                                <td><a href="#" class="btn btn-default">Edit</a></td>
-                                <td>
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-info">Action</button>
-                                        <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown">
-                                        <span class="caret"></span>
-                                        <span class="sr-only">Toggle Dropdown</span>
-                                        </button>
-                                        <ul class="dropdown-menu" role="menu">
-                                            <li><a href="#">Bootstrap</a></li>
-                                            <li><a href="#">Font Awesome</a></li>
-                                            <li><a href="#">jQuery</a></li>
-                                        </ul>
-                                    </div>
-                                </td>
-                                <td><a href="#" class="btn btn-link">Delete</a></td>
-                            </tr>
-                            <tr>
-                                <td>3</td>
-                                <td>Authen</td>
-                                <td>Jobs</td>
-                                <td>@@aj</td>
-                                <td>aj@company.com</td>
-                                <td><a href="#" class="btn btn-default">Edit</a></td>
-                                <td>
-                                    <!-- Split button -->
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-info">Action</button>
-                                        <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown">
-                                        <span class="caret"></span>
-                                        <span class="sr-only">Toggle Dropdown</span>
-                                        </button>
-                                        <ul class="dropdown-menu" role="menu">
-                                            <li><a href="#">Bootstrap</a></li>
-                                            <li><a href="#">Font Awesome</a></li>
-                                            <li><a href="#">jQuery</a></li>
-                                        </ul>
-                                    </div>
-                                </td>
-                                <td><a href="#" class="btn btn-link">Delete</a></td>
-                            </tr>
-                            <tr>
-                                <td>4</td>
-                                <td>Jesica</td>
-                                <td>High</td>
-                                <td>@@jh</td>
-                                <td>jh@company.com</td>
-                                <td><a href="#" class="btn btn-default">Edit</a></td>
-                                <td>
-                                    <!-- Split button -->
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-info">Action</button>
-                                        <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown">
-                                        <span class="caret"></span>
-                                        <span class="sr-only">Toggle Dropdown</span>
-                                        </button>
-                                        <ul class="dropdown-menu" role="menu">
-                                            <li><a href="#">Bootstrap</a></li>
-                                            <li><a href="#">Font Awesome</a></li>
-                                            <li><a href="#">jQuery</a></li>
-                                        </ul>
-                                    </div>
-                                </td>
-                                <td><a href="#" class="btn btn-link">Delete</a></td>
-                            </tr>
-                            <tr>
-                                <td>5</td>
-                                <td>Tom</td>
-                                <td>Grace</td>
-                                <td>@@tg</td>
-                                <td>tg@company.com</td>
-                                <td><a href="#" class="btn btn-default">Edit</a></td>
-                                <td>
-                                    <!-- Split button -->
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-info">Action</button>
-                                        <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown">
-                                        <span class="caret"></span>
-                                        <span class="sr-only">Toggle Dropdown</span>
-                                        </button>
-                                        <ul class="dropdown-menu" role="menu">
-                                            <li><a href="#">Bootstrap</a></li>
-                                            <li><a href="#">Font Awesome</a></li>
-                                            <li><a href="#">jQuery</a></li>
-                                        </ul>
-                                    </div>
-                                </td>
-                                <td><a href="#" class="btn btn-link">Delete</a></td>
-                            </tr>
-                            <tr>
-                                <td>6</td>
-                                <td>Book</td>
-                                <td>Rocker</td>
-                                <td>@@br</td>
-                                <td>br@company.com</td>
-                                <td><a href="#" class="btn btn-default">Edit</a></td>
-                                <td>
-                                    <!-- Split button -->
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-info">Action</button>
-                                        <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown">
-                                        <span class="caret"></span>
-                                        <span class="sr-only">Toggle Dropdown</span>
-                                        </button>
-                                        <ul class="dropdown-menu" role="menu">
-                                            <li><a href="#">Bootstrap</a></li>
-                                            <li><a href="#">Font Awesome</a></li>
-                                            <li><a href="#">jQuery</a></li>
-                                        </ul>
-                                    </div>
-                                </td>
-                                <td><a href="#" class="btn btn-link">Delete</a></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>*@
-                <ul class="pagination pull-right">
+
+
+                @*<ul class="pagination pull-right">
                     <li class="disabled"><a href="#">&laquo;</a></li>
                     <li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
                     <li><a href="#">2 <span class="sr-only">(current)</span></a></li>
@@ -264,7 +104,9 @@
                     <li><a href="#">4 <span class="sr-only">(current)</span></a></li>
                     <li><a href="#">5 <span class="sr-only">(current)</span></a></li>
                     <li><a href="#">&raquo;</a></li>
-                </ul>
+                </ul>*@
+
+
             </div>
         </div>
     </div>
